# edge-route

./: .gitignore  .mcp.json  Cargo.toml  README.md
.claude/: CLAUDE.md
.github/workflows/: ci.yml  release.yml
.repowise/: .augment-session.json  centrality_cache.pkl  config.yaml  duplication_cache.pkl  duplication_pairs.pkl  knowledge-graph.json  parse_cache.pkl  state.json  wiki.db
.repowise/jobs/: 614d6c60-3535-4d83-94e8-054df045037f.json
.repowise/lancedb/__manifest/_transactions/: 0-595df39a-dbb8-4a3a-a1c0-c9f5ee9bdfcf.txn
.repowise/lancedb/wiki_pages.lance/_transactions/: 0-b1d9e83f-aa94-4484-b250-ac6b67c5386e.txn  1-c3dca99c-da2a-43b2-b3ab-c2afdf8d2e62.txn  10-c42f7678-969c-4349-9e77-ff9f057bebe7.txn  11-10789e02-bd20-4892-b15e-931214d2159c.txn  12-bafff728-6cb8-4750-a16c-fe3dd0ffd83b.txn  13-c6eae53c-1181-4571-8817-abd30d416c53.txn  14-724d0883-841f-4dcd-91fb-490aaab87a9a.txn  15-d0612a08-3abc-4aa0-875a-58f7bd16622d.txn  16-7e8a882f-5722-4eec-a1d1-ef5efd7b9231.txn  17-369bc347-214c-43a2-96de-c229f851a83a.txn  18-c8239067-75b4-447d-bc6d-0e86cfe71a5a.txn  19-38b7bb02-d99a-47a6-b19e-117e83bcd83f.txn  2-fa30d5ab-aa0d-4afe-86fc-a7b614d9b4a9.txn  20-f33dea12-2a72-49d0-8fbe-1ee669550d26.txn  21-60ff95ea-0c8f-4bd5-8f81-bfef43e7af3f.txn  22-18ed76c9-1af2-4ae5-a2ff-e48fb9090f70.txn  3-211de8d9-aa7b-4a2a-80f5-24016bad606a.txn  4-9311df95-7af4-4719-b50f-8d4b7c35f189.txn  5-86e627fb-f7d6-43e0-889e-10fd8e028fa9.txn  6-81bb4aa8-d6f4-48b3-b3b1-0c4346bc7b45.txn  7-3ae2e922-ae59-4b7d-b9ed-a718275d3632.txn  8-a44c2b80-01c4-4e7e-8c2b-b188d4c11821.txn  9-164d9677-3b22-4676-ac88-3c2b9fd079a1.txn
.repowise/omissions/: omissions.db
config/: config.example.toml  edge-gateway.example.toml
crates/edge-agent/: Cargo.toml
crates/edge-agent/src/: api.rs  main.rs
crates/edge-cli/: Cargo.toml
crates/edge-cli/src/: main.rs
crates/edge-core/: Cargo.toml
crates/edge-core/src/: errors.rs  lib.rs  mapping.rs  state.rs  validation.rs
crates/edge-gateway/: Cargo.toml
crates/edge-gateway/src/: agent.rs  main.rs  mock.rs  ui.rs
crates/edge-linux/: Cargo.toml
crates/edge-linux/src/: lib.rs
crates/edge-netbird/: Cargo.toml
crates/edge-netbird/src/: lib.rs
crates/edge-nft/: Cargo.toml
crates/edge-nft/src/: apply.rs  lib.rs  render.rs
crates/edge-oci/: Cargo.toml
crates/edge-oci/src/: lib.rs
crates/edge-reconcile/: Cargo.toml
crates/edge-reconcile/src/: lib.rs
crates/edge-store/: Cargo.toml
crates/edge-store/migrations/: 0001_init.sql
crates/edge-store/src/: lib.rs
crates/edge-tailscale/: Cargo.toml
crates/edge-tailscale/src/: lib.rs
crates/edge-xdp/: Cargo.toml
crates/edge-xdp/src/: lib.rs
docs/: ci.md  deployment.md  gui.md  netbird-migration.md  recovery.md  xdp.md
scripts/: install.sh  linux-arm64-nft-check.sh  linux-arm64-test.sh  nft-min-check.sh
systemd/: edge-agent.service  edge-gateway.service
web/edgeroute-ui/: app.css  app.js  index.html
