[package]
name = "edge-agent"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "edge-agent"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
edge-core = { path = "../edge-core" }
edge-nft = { path = "../edge-nft" }
edge-reconcile = { path = "../edge-reconcile" }
edge-store = { path = "../edge-store" }
edge-tailscale = { path = "../edge-tailscale" }
ipnet.workspace = true
serde.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
toml.workspace = true
