[package]
name = "edge-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "edge"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
edge-core = { path = "../edge-core" }
edge-nft = { path = "../edge-nft" }
edge-oci = { path = "../edge-oci" }
edge-reconcile = { path = "../edge-reconcile" }
edge-store = { path = "../edge-store" }
edge-tailscale = { path = "../edge-tailscale" }
edge-xdp = { path = "../edge-xdp" }
ipnet.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
