[package]
name = "edge-gateway"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "edge-gateway"
path = "src/main.rs"

[features]
# Test/dev only: serve in-memory sample data instead of calling edge-agent.
# Off by default so release builds exclude all mock code. Never ship with this on.
mock = []

[dependencies]
anyhow.workspace = true
axum.workspace = true
bytes.workspace = true
clap.workspace = true
edge-core = { path = "../edge-core" }
edge-tailscale = { path = "../edge-tailscale" }
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
maud.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tokio.workspace = true
toml.workspace = true
tower-http.workspace = true
tower-service.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
