[package]
name = "edge-store"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
edge-core = { path = "../edge-core" }
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
time.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
